# cltoolbox

./: .gitignore  .gitmodules  .landscape.yml  .pre-commit-config.yaml  AUTHORS.rst  BADGES.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  README.rst  publish.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  tests.yml
docs/: Makefile  command.py  conf.py  default_args.py  index.rst  make.bat  short_options.py  types.py  usage.rst
examples/: dup_type_hints.py  echo.py  git.py  gnu.py  pow.py  pow_arg.py
src/cltoolbox/: __init__.py  cltoolbox.py  rst_text_formatter.py  utils.py
tests/: capture.py  run.py  test_core.py  test_google.py  test_no_decorator.py  test_numpy.py  test_unicode_docstring_on_py2.py  test_utils.py
