[metadata]
name = cltoolbox
author = Tim Cera, PE
author_email = tim@cerazone.net
version = file: VERSION
description = Command Line Interface utility library
long_description = file: README.rst
url = https://timcera.bitbucket.io/
keywords = cli
license = BSD 3-Clause License
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Environment :: Console
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    documentation = https://timcera.bitbucket.io/cltoolbox/docs/index.html#cltoolbox-documentation,
    github = https://github.com/timcera/cltoolbox,
    bitbucket = https://bitbucket.org/timcera/cltoolbox/src/master/

[options]
zip_safe = False
include_package_data = True
install_requires =
    docstring_parser
    python_version>="3.7.1"
package_dir=
    =src
packages=find:


[options.package_data]
* = *.txt, *.rst


[options.extras_require]
dev =   black
        cleanpy
        twine
        pytest
        coverage[toml]
        flake8
        pytest-cov
        pytest-mpl
        pre-commit
        black-nbconvert
        blacken-docs
        velin
        isort
        pyroma
        pyupgrade
        commitizen

[options.packages.find]
exclude =
    examples*
    docs*
    cltoolbox.tests*
where=src

[upload_docs]
upload_dir = docs/_build/html

[coverage:run]
relative_files = True
